tests/invalid/module/unknown_qualified_trait_bound.facet
fn id<T>(x: affine T) -> affine T where T: missing::traits::Show {
  x
}
